--- a/testWeb/views/layout.pug
+++ b/testWeb/views/layout.pug
@@ -5,7 +5,7 @@ html
     link(rel='stylesheet',
       href='/stylesheets/style.css')
     script(src='/socket.io/socket.io.js')
-    script(src='//code.jqurey.com/jquey.min.js')
+		script(src='//code.jquery.com/jquery.min.js')
     script(src='/javascripts/main.js')
   body
     center
