--- a/testWeb/views/main.pug
+++ b/testWeb/views/main.pug
@@ -2,46 +2,48 @@ extends layout
 
 block content
  h1= title
- p
-  font(color='DodgerBlue') #{username} | 님환영합니다.
+ block header
+  p
+    font(color='DodgerBlue') #{username} | 님환영합니다.
  
- #game
-  #bingo
-   table.bingo-board
-    tr
-     td
-     td
-     td
-     td
-     td
-    tr
-     td
-     td
-     td
-     td
-     td
-    tr
-     td
-     td
-     td
-     td
-     td
-    tr
-     td
-     td
-     td
-     td
-     td
-    tr
-     td
-     td
-     td
-     td
-     td
-
-   #user
-    #list
-    #logs
-    input#start_button(type='button', value='Game Start!')
-    input#username(type='hidden', value=username)
+ block contents
+   #game
+    #bingo
+     table.bingo-board
+      tr
+       td
+       td
+       td
+       td
+       td
+      tr
+       td
+       td
+       td
+       td
+       td
+      tr
+       td
+       td
+       td
+       td
+       td
+      tr
+       td
+       td
+       td
+       td
+       td
+      tr
+       td
+       td
+       td
+       td
+       td
+  
+     #user
+      #list
+      #logs
+      input#start_button(type='button', value='Game Start!')
+      input#username(type='hidden', value=username)
 
