--- a/testWeb/views/layout.pug
+++ b/testWeb/views/layout.pug
@@ -8,6 +8,7 @@ html
     script(src='//code.jquery.com/jquery.min.js')
     script(src='/javascripts/main.js')
   body
-    center
+    top
       block header
+    center
       block content
