--- a/testWeb/views/main.pug
+++ b/testWeb/views/main.pug
@@ -7,41 +7,41 @@ block content
  
  #game
   #bingo
-   table.bingo-board
-    tr
-     td
-     td
-     td
-     td
-     td
-    tr
-     td
-     td
-     td
-     td
-     td
-    tr
-     td
-     td
-     td
-     td
-     td
-    tr
-     td
-     td
-     td
-     td
-     td
-    tr
-     td
-     td
-     td
-     td
-     td
+    table.bingo-board
+      tr
+        td
+        td
+        td
+        td
+        td
+      tr
+        td
+        td
+        td
+        td
+        td
+      tr
+        td
+        td
+        td
+        td
+        td
+      tr
+        td
+        td
+        td
+        td
+        td
+      tr
+        td
+        td
+        td
+        td
+        td
 
-   #user
-    #list
-    #logs
-    input#start_button(type='button', value='Game Start!')
-    input#username(type='hidden', value=username)
+    #user
+      #list
+      #logs
+      input#start_button(type='button', value='Game Start!')
+      inßput#username(type='hidden', value=username)
 
