--- a/testWeb/views/main.pug
+++ b/testWeb/views/main.pug
@@ -43,5 +43,5 @@ block content
       #list
       #logs
       input#start_button(type='button', value='Game Start!')
-      inßput#username(type='hidden', value=username)
+      input#username(type='hidden', value=username)
 
